# vld

./: .gitignore  CHANGES.txt  CMakeLists.txt  README.md  vld_vs15.sln  vld_vs15_wo_mfc.sln
lib/cppformat/: CMakeLists.txt  format.vcxproj
lib/gtest/: CMakeLists.txt  gmock-gtest-all.cc  gtest.vcxproj
lib/gtest/gmock/: gmock.h
lib/gtest/gtest/: gtest.h
mfc_detect/: vldmfc.cpp
setup/: build_version.bat  version.h  vld-setup-64.iss  vld-setup.iss
src/: callstack.cpp  callstack.h  stdafx.h  utility.cpp  vld.cpp  vld.h  vld.vcxproj  vldapi.cpp  vldint.h
src/tests/: CMakeLists.txt
src/tests/basics/: Allocs.cpp  CMakeLists.txt  basics.vcxproj
src/tests/corruption/: CMakeLists.txt  corruption.vcxproj
src/tests/dynamic_app/: CMakeLists.txt  dynamic_app.vcxproj
src/tests/dynamic_dll/: CMakeLists.txt  dynamic.vcxproj
src/tests/mfc/: vldmfc.vcxproj
src/tests/mfc_dll/: mfc.vcxproj
src/tests/suite/: CMakeLists.txt  testsuite.cpp  testsuite.vcxproj
src/tests/vld_dll1/: CMakeLists.txt
src/tests/vld_dll2/: CMakeLists.txt
src/tests/vld_main/: CMakeLists.txt
src/tests/vld_main_test/: CMakeLists.txt
src/tests/vld_unload/: CMakeLists.txt
